--- a/backend-gateway-client/src/main/resources/application.yml
+++ b/backend-gateway-client/src/main/resources/application.yml
@@ -20,7 +20,7 @@ spring:
           backend-gateway-client:
             provider: my-provider
             client-id: backend-gateway-client
-            client-secret: <ключ от клиента backend-gateway-client>
+            client-secret: ye8wHFzVc1V6YJaeNXcdQcA6J8b0mesz
             authorization-grant-type: authorization_code
             redirect-uri: "http://backend-gateway-client:9090/login/oauth2/code/{registrationId}"
             scope: openid
