--- a/pom.xml
+++ b/pom.xml
@@ -17,5 +17,12 @@
         <module>backend-gateway-client</module>
         <module>backend-resources</module>
     </modules>
+    <dependencies>
+        <dependency>
+            <groupId>com.redis.testcontainers</groupId>
+            <artifactId>testcontainers-redis</artifactId>
+            <version>1.6.3</version>
+        </dependency>
+    </dependencies>
 
 </project>
